# CPU-Time-Jitter-Based-RNG

./: CMakeLists.txt  README.md
include/: entropy.h  jitterentropy-base-user.h  jitterentropy-base.h  jitterentropy-gcd.h  jitterentropy-sha3.h  jitterentropy-timer.h  jitterentropy.h  sm3.h  sm3_rng.h
include/jitterentropy/: jitterentropy-base.h  jitterentropy-gcd.h  jitterentropy-health.h  jitterentropy-noise.h  jitterentropy-sha3.h  jitterentropy-sm3.h  jitterentropy-timer.h  jitterentropy.h
src/: entropy.c  jitterentropy-base.c  jitterentropy-gcd.c  jitterentropy-health.c  jitterentropy-noise.c  jitterentropy-sha3.c  jitterentropy-timer.c  sm3.c  sm3_rng.c
src/jitterentropy/: jitterentropy-base.c  jitterentropy-gcd.c  jitterentropy-health.c  jitterentropy-noise.c  jitterentropy-sha3.c  jitterentropy-sm3.c  jitterentropy-timer.c
test/: test.c
